--- a/App/final.html
+++ b/App/final.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html> <!-- lang="en" manifest="final.manifest"> -->
+<html lang="en" manifest="final.manifest">
 <head>
 		<meta charset="utf-8">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -116,9 +116,26 @@
 			
 			#canvasDiv{position:relative;}
 			#playbutton{width: 75px; position:absolute; right: 40px; top: 20px; z-index:2}
-			#playbuttonbackground{position:absolute; left:292px;z-index:1}
+			#playbuttonbackground{position:absolute; left:292px; z-index:1; pointer-events:none}
 			#canvas{background-color: rgba(255,255,255,0.5); z-index:0}
 			#selector{font-size:40px; color:#999;}
+			
+		#listtable{font-size:40px;}
+		
+		.listtablecell{
+			width: 500px;
+		}
+
+		.leftspan{
+			float: left;
+			text-align:left;
+		}
+
+		.onoffbutton{
+			background: url('Images/onoffbutton.png');
+			float: right;
+			width: 20px;
+		}
 		</style>
 </head>
 <body onload="init();">
@@ -143,8 +160,6 @@
 		<div class="titlehead">
 			<p style="left:130px" class="title">Test!</p>	
 		</div>
-		<!-- <img id="playbutton" src='Images/Playbutton On.png' onclick="play();"> -->
-		<!-- <img id="playbuttonbackground" src='Images/Playbutton Back.png'> -->
 		<div style="position:relative;">
 			<span class="right">
 				<select id="selector" style="font-family: Kozuko"></select>
@@ -169,8 +184,9 @@
 		<div style="height:10px"></div>
 		<span onclick="showAllCharacters();">Characters /</span>
 		<span onclick="showAllPercents();">Percentages</span>
-		<div id="containr" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
+		<div id="containr">
 			<table id="results"></table>
+			<table id="listtable"></table>
 		</div>
 	</div>
 	
@@ -234,6 +250,7 @@
 				}
 			}
 			document.getElementById(page).style.display = "block";
+			if (page == "resultspage") {refresh();}
 			$('backbutton').style.display = (page == 'menupage' || page == 'overlay')? "none" : "block";
 		}
 		
