Renamed to index.html and index.manifest
renamed to index.html to make it Github.io friendly, also renamed
manifest to index.manifest

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" manifest="final.manifest">
+<html lang="en" manifest="index.manifest">
 <head>
 		<meta charset="utf-8">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
