--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html lang="en" manifest="index.manifest">
+<!--html lang="en" manifest="index.manifest"-->
+<html>
 
 <head>
     <meta charset="utf-8">
@@ -26,51 +27,38 @@
         float:right
     }
     .page {
-        width: 600px;
-        height: 920px;
+        background: url('Images/Background Scroll - bordered.png');
         position: absolute;
-        left:20px;
+        color:white;
+        width: 100%;
+        height: 100%;
+        left:0;
         top:0;
+        margin-left: 20;
         z-index: 1;
     }
-    .background {
-        position:absolute;
-        left:0px;
-        top:0px;
-        z-index: -1;
-    }
     #menupage {
-        width: 640px;
-        height: 920px;
         text-align:center;
         font-size:90px;
-        color: white;
-        left:0px;
-        margin-top: 0px;
-        margin-bottom: 50px;
     }
     #testpage {
         font-size:60px;
-        color:white;
     }
     #settingspage {
-        width: 620px;
         text-align:center;
         font-size:60px;
-        color:white;
         overflow:hidden;
     }
     #resultspage {
         text-align:center;
         font-size:30px;
-        color:white;
     }
     #maintitle {
         width:640px;
         position: absolute;
         left:0;
         top:220px;
-        z-index:2;
+        z-index:1;
         -webkit-opacity: 1;
         -moz-opacity: 1;
         opacity: 1;
@@ -80,14 +68,18 @@
         -o-transition: all 1s ease;
         transition: all 1s ease;
     }
-    #overlay {
-        background: url('Images/Background Scroll - bordered.png');
-        z-index: 2;
+    #non-mobile {
+        z-index: 3;
         text-align:center;
+    }
+    #overlay {
+        z-index: 4;
+        text-align:center;
+        position: relative;
+        top:0;
         left:0;
-        right:0;
-        width:100%;
-        height:100%
+        width: 100%;
+        height: 100%;
     }
     #loading {
         margin-top:700px;
@@ -121,33 +113,31 @@
     }
     .titlehead {
         background: url('Images/Header2.png');
-        position:relative;
         height: 168px;
-        width:640px;
-        left:-20px;
-        top:0;
-        z-index: 0;
+        width: 640px;
+        float: right;
         overflow:hidden;
     }
     #canvasDiv {
         position:relative;
     }
     #playbutton {
-        width: 75px;
         position:absolute;
+        width: 75px;
         right: 40px;
         top: 20px;
         z-index:2
     }
     #playbuttonbackground {
         position:absolute;
-        left:292px;
+        right:0;
         z-index:1;
         pointer-events:none
     }
     #canvas {
+        position:absolute;
         background-color: rgba(255, 255, 255, 0.5);
-        z-index:0
+        z-index:0;
     }
     #selector {
         font-size:40px;
@@ -168,23 +158,29 @@
         float: right;
         width: 20px;
     }
+    .menuOption {
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
     </style>
 </head>
 
 <body onload="init();">
-    <div id="overlay" class="page">
-
-        <img id="loading" src="Images/Loading.png">
+    <div id="non-mobile" class="page">
+        <p>This app is meant for mobile browsers.</p>
+        <p>Please visit woojoo666.github.io/KanaApp/ on a mobile device</p>
+        <img id="qrcode" src="Images/qrcode.png">
     </div>
 
-    <img id="maintitle" src="Images/Title Overlay.png">
-    <img src="Images/Background Scroll - bordered.png" class="background">
-
     <div id="menupage" class="page">
+        <div id="overlay">
+            <img id="loading" src="Images/Loading.png">
+        </div>
+        <img id="maintitle" src="Images/Title Overlay.png">
         <div style="height:400px;"></div>
-        <p onclick="jumpTo('testpage')" style="margin-top: 0px;margin-bottom: 50px;">Start Test</p>
-        <p onclick="jumpTo('resultspage')" style="margin-top: 0px;margin-bottom: 50px;">Results</p>
-        <p onclick="jumpTo('settingspage')" style="margin-top: 0px;margin-bottom: 50px;">Settings</p>
+        <p onclick="jumpTo('testpage')" class="menuOption">Start Test</p>
+        <p onclick="jumpTo('resultspage')" class="menuOption">Results</p>
+        <p onclick="jumpTo('settingspage')" class="menuOption">Settings</p>
     </div>
 
     <img id="backbutton" src="Images/Back Button.png" onclick="jumpTo('menupage');">
@@ -237,6 +233,15 @@
         reorient();
     }
 
+    //from http://stackoverflow.com/a/11381730/1852456
+    window.mobilecheck = function() {
+        var check = false;
+        (function(a) {
+            if (/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))) check = true
+        })(navigator.userAgent || navigator.vendor || window.opera);
+        return check;
+    }
+
     //finds the center of a 90 degree rotation based on the current and projected coordinates of a point, and if the rotation is clockwise or not
 
     function findCenter(curr, next, clockwise) {
@@ -262,21 +267,22 @@
     }
 
     function init() {
+        jumpTo('non-mobile');
+        if (!window.mobilecheck())
+          return;
+
+        jumpTo('menupage');
         reorient();
         initTest();
         initTable();
         $('overlay').onclick = function() {
-            jumpTo('menupage');
-            startup()
+            startup();
         };
-        $('loading').src = "Images/Continue.png"
-        jumpTo('overlay');
+        $('loading').src = "Images/Continue.png";
     }
 
     function startup() {
-        document.body.removeChild($('overlay'));
-        var maintitle = document.body.removeChild($('maintitle'));
-        $('menupage').appendChild(maintitle);
+        $('menupage').removeChild($('overlay'));
         //          maintitle.style.opacity = 0;
         window.setTimeout(function() {
             maintitle.style.top = '-50px';
@@ -291,10 +297,15 @@
             }
         }
         document.getElementById(page).style.display = "block";
-        if (page == "resultspage") {
-            refresh();
+        switch (page) {
+            case 'resultspage':
+                refresh();
+                break;
+            case 'testpage':
+                initTest();
+                break;
         }
-        $('backbutton').style.display = (page == 'menupage' || page == 'overlay') ? "none" : "block";
+        $('backbutton').style.display = (page == 'menupage' || page == 'overlay' || page == 'non-mobile') ? "none" : "block";
     }
 
     function setVolume() {
