resultsdiv.js cleaning
moved function $(id) to index.html
moved minData to resultsdiv, though currently I dont use it
commented out resultsdiv manual scrolling because it isn't working

--- a/index.html
+++ b/index.html
@@ -218,7 +218,10 @@
     </div>
 
     <script>
-    
+    function $(id) {
+        return document.getElementById(id);
+    }
+
     window.onorientationchange = function() {
         reorient();
     }
