renamed maindiv. unindented & renamed resultsdiv
renamed maindiv.js to testpage.js
renamed resultsdiv.js to resultspage.js and unindented resultspage.js

--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
         document.getElementById('player').volume = document.getElementById('volumeslider').value / 100;
     }
     </script>
-    <script src="maindiv.js"></script>
+    <script src="testpage.js"></script>
     <script src="testpage_OCR.js"></script>
     <script src="testpage_eventhandlers.js"></script>
-    <script src="resultsdiv.js"></script>
+    <script src="resultspage.js"></script>
 </body>
 
 </html>
