--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
         font-size:60px;
         overflow:hidden;
     }
-    #resultspage {
-        text-align:center;
-        font-size:30px;
-    }
     #maintitle {
         width:640px;
         position: absolute;
@@ -83,6 +79,10 @@
         margin-top:700px;
         z-index:1
     }
+    .menuOption {
+        margin-top: 0px;
+        margin-bottom: 50px;
+    }
     #backbutton {
         width:100px;
         position:absolute;
@@ -91,17 +91,12 @@
         z-index:2;
         display:none
     }
-    #containr {
-        border: 3px solid white;
-        overflow:scroll;
-        height:700px;
-    }
-    #tableWrapper {
+    .tableWrapper {
         display: table;
         width: 100%;
         height: 100%;
     }
-    #testpage-titleWrapper {
+    .tableRow {
         display: table-row;
     }
     .titleWrapper {
@@ -124,15 +119,18 @@
         overflow:hidden;
         background: url('Images/Header2.png');
     }
-    #canvasDivWrapper {
+    .wrapper {
         width: 100%;
         height: 100%;
-        display: table-row;
+        position:relative;
     }
     #canvasDiv {
-        position:relative;
-        width: 100%;
-        height: 100%;
+        position: absolute;
+        top:0;
+        bottom:0;
+        left:0;
+        right:0;
+        margin:10px;
     }
     #playbutton {
         position:absolute;
@@ -147,7 +145,6 @@
         z-index:1;
         pointer-events:none
     }
-    /*TODO: make canvas offset from its container, like margins*/
     #canvas {
         position:absolute;
         z-index:0;
@@ -155,26 +152,8 @@
         height: 100%;
         background-color: rgba(255, 255, 255, 0.5);
     }
-    #listtable {
-        font-size:40px;
-    }
-    .listtablecell {
-        width: 500px;
-    }
-    .leftspan {
-        float: left;
-        text-align:left;
-    }
-    .onoffbutton {
-        float: right;
-        width: 20px;
-        background: url('Images/onoffbutton.png');
-    }
-    .menuOption {
-        margin-top: 0px;
-        margin-bottom: 50px;
-    }
     </style>
+    <link rel="stylesheet" type="text/css" href="resultspage.css">
 </head>
 
 <body onload="init();">
@@ -198,18 +177,20 @@
     <img id="backbutton" src="Images/Back Button.png" onclick="jumpTo('menupage');">
 
     <div id="testpage" class="page" style="display:none;">
-        <div id="tableWrapper">
-            <div class='titleWrapper' id='testpage-titleWrapper'>
+        <div class="tableWrapper">
+            <div class='titleWrapper tableRow'>
                 <div class="titlehead">
                     <p class="title">Test!</p>
                 </div>
             </div>
             <audio id="player">Your browser does not support audio tag</audio>
-            <div id='canvasDivWrapper'>
-                <div id="canvasDiv">
-                    <img id="playbutton" src='Images/Playbutton On.png'>
-                    <img id="playbuttonbackground" src='Images/Playbutton Back.png'>
-                    <canvas id="canvas"></canvas>
+            <div class='tableRow'>
+                <div class='wrapper'>
+                    <div id="canvasDiv">
+                        <img id="playbutton" src='Images/Playbutton On.png'>
+                        <img id="playbuttonbackground" src='Images/Playbutton Back.png'>
+                        <canvas id="canvas"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
@@ -225,8 +206,8 @@
         <span onclick="showAllCharacters();">Characters /</span>
         <span onclick="showAllPercents();">Percentages</span>
         <div id="containr">
-            <table id="results"></table>
-            <table id="listtable"></table>
+            <table id="characterTable"></table>
+            <table id="percentsTable"></table>
         </div>
     </div>
 
@@ -295,7 +276,7 @@
         jumpTo('menupage');
         //reorient();
         initTest();
-        initTable();
+        initResults();
         $('overlay').onclick = function() {
             startup();
         };
