--- a/index.html
+++ b/index.html
@@ -39,9 +39,6 @@
         text-align:center;
         font-size:90px;
     }
-    #testpage {
-        font-size:60px;
-    }
     #settingspage {
         text-align:center;
         font-size:60px;
@@ -91,15 +88,8 @@
         z-index:2;
         display:none
     }
-    .tableWrapper {
-        display: table;
-        width: 100%;
-        height: 100%;
-    }
-    .tableRow {
-        display: table-row;
-    }
     .titleWrapper {
+        display: table-row;
         position: relative;
         width: 100%;
         height: 168px;
@@ -119,12 +109,22 @@
         overflow:hidden;
         background: url('Images/Header2.png');
     }
+    .tableWrapper {
+        display: table;
+        width: 100%;
+        height: 100%;
+    }
+    .bottomRow {
+        display: table-row;
+        width:100%;
+        height:100%;
+    }
     .wrapper {
         width: 100%;
         height: 100%;
         position:relative;
     }
-    #canvasDiv {
+    .marginWrapper {
         position: absolute;
         top:0;
         bottom:0;
@@ -132,28 +132,9 @@
         right:0;
         margin:10px;
     }
-    #playbutton {
-        position:absolute;
-        width: 75px;
-        top: 20px;
-        right: 40px;
-        z-index:2;
-    }
-    #playbuttonbackground {
-        position:absolute;
-        right:0;
-        z-index:1;
-        pointer-events:none
-    }
-    #canvas {
-        position:absolute;
-        z-index:0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.5);
-    }
     </style>
-    <link rel="stylesheet" type="text/css" href="resultspage.css">
+    <link rel="stylesheet" type="text/css" href="testpage.css" />
+    <link rel="stylesheet" type="text/css" href="resultspage.css" />
 </head>
 
 <body onload="init();">
@@ -178,15 +159,15 @@
 
     <div id="testpage" class="page" style="display:none;">
         <div class="tableWrapper">
-            <div class='titleWrapper tableRow'>
+            <div class='titleWrapper'>
                 <div class="titlehead">
                     <p class="title">Test!</p>
                 </div>
             </div>
             <audio id="player">Your browser does not support audio tag</audio>
-            <div class='tableRow'>
+            <div class='bottomRow'>
                 <div class='wrapper'>
-                    <div id="canvasDiv">
+                    <div class='marginWrapper' id="canvasDiv">
                         <img id="playbutton" src='Images/Playbutton On.png'>
                         <img id="playbuttonbackground" src='Images/Playbutton Back.png'>
                         <canvas id="canvas"></canvas>
@@ -197,17 +178,23 @@
     </div>
 
     <div id="resultspage" class="page" style="display:none;">
-        <div class='titleWrapper'>
-            <div class="titlehead">
-                <p class="title">Results</p>
+        <div class="tableWrapper">
+            <div class='titleWrapper'>
+                <div class="titlehead">
+                    <p class="title">Results</p>
+                </div>
             </div>
-        </div>
-        <div style="height:10px"></div>
-        <span onclick="showAllCharacters();">Characters /</span>
-        <span onclick="showAllPercents();">Percentages</span>
-        <div id="containr">
-            <table id="characterTable"></table>
-            <table id="percentsTable"></table>
+            <span onclick="showAllCharacters();">Characters</span>
+            <span>/</span>
+            <span onclick="showAllPercents();">Percentages</span>
+            <div class='bottomRow'>
+                <div class='wrapper'>
+                    <div class='marginWrapper' id="containr">
+                        <table id="characterTable"></table>
+                        <table id="percentsTable"></table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
