Hidden menu for all percentsTable rows
Put onoffDiv and clearDiv into a wrapper div 'hiddenMenu'
Added touch event handlers to percentsTable and all its table rows to
make sliding hidden menu
Moved all resultspage event handlers to new file
resultspage_eventhandlers.js
renamed stuff in resultspage.css, changed resultspage.js to follow

--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
     <script src="testpage.js"></script>
     <script src="testpage_OCR.js"></script>
     <script src="testpage_eventhandlers.js"></script>
+    <script src="resultspage_eventhandlers.js"></script>
     <script src="resultspage.js"></script>
 </body>
 
