--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <audio id="player">Your browser does not support audio tag</audio>
             <div class='bottomRow'>
-                <div class='wrapper'>
+                <div class='wrapper' id='canvasDivWrapper'>
                     <div class='marginWrapper' id="canvasDiv">
                         <img id="playbutton" src='Images/Playbutton On.png'>
                         <img id="playbuttonbackground" src='Images/Playbutton Back.png'>
