Changed to 'homework' font
Changed regular english text to homework.ttf font (font-family: Main),
all japanese text uses AozoraMincho font (font-family: Kana)
Adjusted font sizes
For correct/incorrect display, instead of drawing an "X" or checkmark,
just change the color of the drawn hiragana
Added icons

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5, user-scalable=0" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <link rel="apple-touch-icon" sizes="57x57" href="icons/wu-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="icons/wu-72x72.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="icons/wu-114x114.png" />
-    <link rel="icon" type="image/png" href="icons/favicon.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="icons/icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="icons/icon-114x114.png" />
+    <link rel="icon" type="image/x-icon" href="icons/favicon.ico" />
 
     <title>Hiragana Draw</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
@@ -83,7 +83,7 @@
     <div id='settingspage' class="page">
         <div class='titleWrapper'>
             <div class="titlehead">
-                <p style='right: -50px;' class="title">Settings</p>
+                <p style='right: -10px;' class="title">Settings</p>
             </div>
         </div>
         <div style="height:100px"></div>
