initial font loading, minor css changes
added an invisible block at the end of index.html that uses font-family
Kana, so that the font will be for sure loaded by the time body.onload
is called

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         <p onclick="clearAll()">Clear All Data</p>
     </div>
 
+    <div style='font-family:Kana; visibility:hidden;' onload="this.display = 'none';">Loading Fonts</div>
+
     <script>
     //TODO: reenable manifest
 
