--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-<!--html lang="en" manifest="index.manifest"-->
-<html>
+<html lang="en" manifest="index.manifest">
 
 <head>
     <meta charset="utf-8">
