Changed the name...thats it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="icons/icon-114x114.png" />
     <link rel="icon" type="image/x-icon" href="icons/favicon.ico" />
 
-    <title>Hiragana Draw</title>
+    <title>Kana Draw</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="stylesheet" type="text/css" href="testpage.css" />
     <link rel="stylesheet" type="text/css" href="resultspage.css" />
